--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,9 @@
 language: csharp
+solution: ./SimpleConsoleApp/SimpleConsoleApp.sln 
+install:
+  - nuget restore ./SimpleConsoleApp/SimpleConsoleApp.sln 
+  - nuget install NUnit.Runners -Version 2.6.4 -OutputDirectory testrunner
 script:
   - xbuild /p:Configuration=Debug ./SimpleConsoleApp/SimpleConsoleApp.sln 
-before_install:
-  - sudo apt-get install nunit-console
-before_script:
-  - nuget restore ./SimpleConsoleApp/SimpleConsoleApp.sln
-after_script:
-- nunit-console ./Simple-Console-App/SimpleConsoleAppTests/bin/Debug/SimpleConsoleAppTests.dll
+  - mono ./testrunner/NUnit.Runners.2.6.4/tools/nunit-console.exe ./SimpleConsoleAppTests/bin/Debug/SimpleConsoleAppTests.dll
 
